--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ version '1.0-SNAPSHOT'
 mainClassName = 'pt.ist.ap.labs.RunTests'
 
 run {
-    args = ["pt.ist.ap.labs.TestSimple"]
+    args = ["pt.ist.ap.labs.TestInheritance"]
 }
 
 // In this section you declare where to find the dependencies of your project
